<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/white">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="600dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center">

                <ImageView
                        android:layout_width="83dp"
                        android:layout_height="104dp"
                        android:id="@+id/imageView6"
                        android:layout_weight="1"
                        android:layout_margin="15dp"
                        app:srcCompat="@drawable/logo" />

                <TextView
                        android:text="@string/codiText"
                        android:layout_width="101dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvCodi"
                        android:layout_weight="1"
                        android:shadowColor="@color/black"
                        android:textSize="24sp"
                        android:paddingStart="5dp" />

                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:ems="10"
                        android:id="@+id/tfCodi"
                        android:layout_weight="1"
                        android:background="@color/blau"
                        android:shadowColor="@color/black"
                        android:layout_marginRight="10dp"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="600dp"
                    android:layout_weight="1"
                    android:background="@color/blau"
                    android:paddingEnd="5dp"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp">

                <TextView
                        android:text="@string/nomText"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvNom"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:paddingStart="5dp"
                        android:layout_marginStart="10dp" />

                <EditText
                        android:layout_width="235dp"
                        android:layout_height="37dp"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/tfNom"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:shadowColor="@color/black"
                        android:layout_marginRight="10dp"
                        android:paddingLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="600dp"
                    android:layout_weight="1"
                    android:background="@color/blau"
                    android:paddingEnd="5dp"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp">

                <TextView
                        android:text="@string/cognomsText"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvTelefon"
                        android:layout_weight="1"
                        android:shadowColor="@color/black"
                        android:textSize="24sp"
                        android:paddingStart="5dp"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/black" />

                <EditText
                        android:layout_width="235dp"
                        android:layout_height="35dp"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/tfCognoms"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:shadowColor="@color/black"
                        android:layout_marginRight="10dp"
                        android:paddingLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="600dp"
                    android:layout_weight="1"
                    android:background="@color/blau"
                    android:paddingEnd="5dp"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp">

                <TextView
                        android:text="@string/telefonText"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView18"
                        android:layout_weight="1"
                        android:shadowColor="@color/black"
                        android:textSize="24sp"
                        android:paddingStart="5dp"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/black" />

                <EditText
                        android:layout_width="235dp"
                        android:layout_height="35dp"
                        android:ems="10"
                        android:id="@+id/tfTelefon"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:shadowColor="@color/black"
                        android:layout_marginRight="10dp"
                        android:paddingLeft="10dp"
                        android:inputType="phone" />

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="600dp"
                    android:layout_weight="1"
                    android:background="@color/blau"
                    android:paddingEnd="5dp"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp">

                <TextView
                        android:text="@string/mailText"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView20"
                        android:layout_weight="1"
                        android:shadowColor="@color/black"
                        android:textSize="24sp"
                        android:paddingStart="5dp"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/black" />

                <EditText
                        android:layout_width="235dp"
                        android:layout_height="35dp"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/tfMail"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:shadowColor="@color/black"
                        android:layout_marginRight="10dp"
                        android:paddingLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="650dp"
                    android:layout_weight="1"
                    android:background="@color/blau"
                    android:paddingEnd="5dp"
                    android:gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                <TextView
                        android:text="@string/genereText"
                        android:layout_width="122dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView16"
                        android:layout_weight="1"
                        android:shadowColor="@color/black"
                        android:textSize="24sp"
                        android:paddingStart="5dp"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/black" />

                <RadioGroup
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/rgGenere">

                    <RadioButton
                            android:text="@string/homeText"
                            android:layout_width="161dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/rbHome"
                            android:textSize="24sp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/gris"
                            app:useMaterialThemeColors="false"
                            android:buttonTint="@color/black" />

                    <RadioButton
                            android:text="@string/donaText"
                            android:layout_width="161dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/rbDona"
                            android:textSize="24sp"
                            android:background="@color/gris"
                            app:useMaterialThemeColors="false"
                            android:buttonTint="@color/black" />

                </RadioGroup>

                <ToggleButton
                        android:layout_width="116dp"
                        android:layout_height="96dp"
                        android:id="@+id/tbActivar"
                        android:layout_weight="1"
                        android:textOff="@string/tgButtonActivar"
                        android:textOn="@string/tgButtonDesactivar"
                        android:background="@color/verd"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:textSize="16sp"
                        android:onClick="activar" />

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="600dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:background="@color/white"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                <Button
                        android:layout_width="78dp"
                        android:layout_height="80dp"
                        android:id="@+id/btEsborrar"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:backgroundTint="@color/vermell"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"
                        android:textSize="10sp"
                        app:icon="@android:drawable/ic_menu_delete"
                        app:iconSize="50sp"
                        app:iconTint="#000000"
                        android:height="200dp"
                        android:onClick="esborrar" />

                <Button
                        android:layout_width="78dp"
                        android:layout_height="80dp"
                        android:id="@+id/btEditar"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:backgroundTint="@color/purple_200"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"
                        android:textSize="10sp"
                        android:onClick="editar"
                        app:icon="@android:drawable/ic_menu_edit"
                        app:iconSize="50sp"
                        app:iconTint="#000000"
                        android:height="200dp" />

                <Button
                        android:layout_width="75dp"
                        android:layout_height="80dp"
                        android:id="@+id/btBuscar"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:backgroundTint="@color/blau"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"
                        android:textSize="10sp"
                        android:onClick="buscar"
                        app:icon="@android:drawable/ic_menu_search"
                        app:iconSize="50sp"
                        app:iconTint="#000000"
                        android:height="200dp" />

                <Button
                        android:layout_width="76dp"
                        android:layout_height="80dp"
                        android:id="@+id/btRegistrar"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:backgroundTint="@color/verd"
                        android:textColor="@color/black"
                        android:layout_marginTop="5dp"
                        android:textSize="10sp"
                        android:onClick="guardar"
                        app:icon="@android:drawable/ic_menu_save"
                        app:iconSize="50sp"
                        app:iconTint="#000000"
                        android:height="200dp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>